--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
 
-@media (width:800px) {}
 
 * {
     margin: 0;
@@ -12,40 +11,58 @@ body {
         monospace;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0% 1%;
+    /* padding: 0% 5%; */
 }
-nav{
+
+div{
+    max-width: 1280px;
+ 
+}
+nav {
     background-color: black;
-    padding: 2%;
+  margin: 0 auto;
+  /* padding: 2% 5%; */
 }
-nav a{
-   font-size: larger;
+
+nav a {
+    font-size: larger;
     color: white;
 }
+
 button {
-    font-size:large;
+    font-size: large;
     background-color: rgb(234, 247, 246);
     width: 150px;
     height: 30px;
     border: 1px solid rgb(118, 250, 239);
     border-radius: 8px;
 }
-input, select{
-height: 30px;
-font-size:medium;
+
+input,
+select {
+    max-width: 200px;
+    height: 30px;
+    font-size: medium;
     background-color: lavender;
     border: 1px solid rgb(198, 198, 248);
     border-radius: 8px;
     padding: 0% 1%;
 }
-.box1{
+
+.box1 {
+    max-width: 1280px;
     background-color: rgb(202, 202, 202);
-    padding: 1%;
+    margin: 0 auto;
+    /* padding:  0% 5%; */
 }
+
 .box2 {
+    max-width: 1280px;
     background-color: rgb(212, 230, 247);
-    padding: 1%;
+    margin: 0 auto;
+    /* padding: 2% 5%; */
 }
+
 .boxInside{
     margin: 2% auto;
 }
