--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Fira Code',
-        monospace;
-    max-width: 1280px;
-    margin: 0 auto;
-    /* padding: 0% 5%; */
+  font-family: "Fira Code", monospace;
+  max-width: 1280px;
+  height: 100vh;
+  margin: 0 auto;
+  /* padding: 0% 5%; */
+  background: rgb(4, 52, 40);
+  background: linear-gradient(
+    0deg,
+    rgba(4, 52, 40, 1) 0%,
+    rgba(225, 239, 255, 1) 57%,
+    rgba(225, 255, 247, 1) 100%
+  );
 }
 
-div{
-    max-width: 1280px;
- 
+div {
+  max-width: 1280px;
 }
+
 nav {
-    background-color: black;
+  background-color: black;
   margin: 0 auto;
-  /* padding: 2% 5%; */
+  padding: 1% 3% 1%;
+  border-radius: 20px;
 }
 
 nav a {
-    font-size: larger;
-    color: white;
+  font-size: larger;
+  color: white;
 }
 
 button {
-    font-size: large;
-    background-color: rgb(234, 247, 246);
-    width: 150px;
-    height: 30px;
-    border: 1px solid rgb(118, 250, 239);
-    border-radius: 8px;
+  font-size: large;
+  background-color: rgb(234, 247, 246);
+  width: 150px;
+  height: 30px;
+  border: 1px solid rgb(3, 103, 95);
+  border-radius: 8px;
 }
 
 input,
 select {
-    max-width: 200px;
-    height: 30px;
-    font-size: medium;
-    background-color: lavender;
-    border: 1px solid rgb(198, 198, 248);
-    border-radius: 8px;
-    padding: 0% 1%;
+  max-width: 200px;
+  height: 30px;
+  font-size: medium;
+  background-color: rgb(250, 250, 250);
+  border: 1px solid rgb(198, 198, 248);
+  border-radius: 8px;
+  padding: 0% 1%;
 }
 
 .box1 {
-    max-width: 1280px;
-    background-color: rgb(202, 202, 202);
-    margin: 0 auto;
-    /* padding:  0% 5%; */
+  max-width: 1280px;
+  background-color: rgb(202, 202, 202);
+  margin: 1% auto;
+  padding: 0% 3% 1%;
+  border-radius: 20px;
 }
 
 .box2 {
-    max-width: 1280px;
-    background-color: rgb(212, 230, 247);
-    margin: 0 auto;
-    /* padding: 2% 5%; */
+  max-width: 1280px;
+  background-color: rgb(212, 230, 247);
+  margin: 0 auto;
+  padding: 0% 3% 1%;
+  border-radius: 20px;
 }
 
-.boxInside{
-    margin: 2% auto;
+.boxInside {
+  margin: 2% auto;
 }
