--- a/css/menu.css
+++ b/css/menu.css
@@ -20,7 +20,7 @@ label::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(10, 38, 57, .75);
+    background-color: rgb(104, 133, 126, 0.7);
     content: '';
     opacity: 0;
     pointer-events: none;
@@ -47,7 +47,7 @@ label .burger::after {
     display: block;
     width: 100%;
     height: 12%;
-    background: rgb(8, 8, 8);
+    background: rgb(0, 0, 0);
     content: '';
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
