--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,16 @@ body {
   height: 100vh;
   margin: 0 auto;
   overflow-x: hidden;
-  /* padding: 0% 5%; */
-  background: rgb(4, 52, 40);
-  background: linear-gradient(
-    0deg,
-    rgba(4, 52, 40, 1) 0%,
-    rgba(225, 239, 255, 1) 57%,
-    rgba(225, 255, 247, 1) 100%
-  );
+  padding: 0% 5%;
+  background: rgb(4, 52, 40, 0.6) ;
+  background: linear-gradient(0deg,
+      rgba(4, 52, 40, 1) 0%,
+      rgba(225, 239, 255, 1) 57%,
+      rgba(225, 255, 247, 1) 100%);
 }
 
-h1 {
+h1,
+h3 {
   display: flex;
   justify-content: center;
   padding: 1% 0%;
@@ -32,12 +31,12 @@ div {
   max-width: 1280px;
 }
 
-nav {
+/* nav {
   background-color: black;
   margin: 0 auto;
   padding: 1% 3% 1%;
   border-radius: 20px;
-}
+} */
 
 nav a {
   font-size: larger;
@@ -66,19 +65,35 @@ select {
 
 .box1 {
   max-width: 1280px;
-  background-color: rgb(202, 202, 202);
-  margin: 1% auto;
-  padding: 0% 3% 1%;
+  height: 100vh;
+  background-color:#cededf;
+  margin: 0% auto;
+  padding: 0% 5% 0% 5%;
   border-radius: 20px;
 }
 
 .box2 {
   max-width: 1280px;
-  background-color: rgb(212, 230, 247);
-  margin: 0 auto;
-  padding: 0% 3% 1%;
+  height: 100vh;
+  background-color: #e6efe5;
+  margin: 0% auto;
+  padding: 0% 5% 0% 5%;
   border-radius: 20px;
 }
+
+.box3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1280px;
+  height: 100vh;
+  background-color: RGB(185, 208, 182);
+  margin: 0% auto;
+  padding: 0% 5% 0% 5%;
+  border-radius: 20px;
+}
+
+
 
 .boxInside {
   margin: 2% auto;
