--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Fira Code", monospace;
   max-width: 1280px;
-  height: 100vh;
+  /* height: 100vh;  */
   margin: 0 auto;
   overflow-x: hidden;
   padding: 0% 5%;
@@ -66,31 +66,26 @@ select {
 
 .box1 {
   max-width: 1280px;
-  height: 100vh;
   background-color:#cededf;
   margin: 0% auto;
-  padding: 0% 5% 0% 5%;
+  padding: 5%;
   border-radius: 20px;
 }
 
 .box2 {
   max-width: 1280px;
-  height: 100vh;
   background-color: #e6efe5;
   margin: 0% auto;
-  padding: 0% 5% 0% 5%;
+  padding: 5%;
   border-radius: 20px;
 }
 
 .box3 {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 1280px;
-  height: 100vh;
-  background-color: RGB(185, 208, 182);
+  align-items: center;  background-color: RGB(185, 208, 182);
   margin: 0% auto;
-  padding: 0% 5% 0% 5%;
+  padding: 5%;
   border-radius: 20px;
 }
 
