--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,13 @@ body {
   margin: 0 auto;
   overflow-x: hidden;
   padding: 0% 5%;
-  background: rgb(4, 52, 40, 0.6) ;
-  background: linear-gradient(0deg,
-      rgba(4, 52, 40, 1) 0%,
-      rgba(225, 239, 255, 1) 57%,
-      rgba(225, 255, 247, 1) 100%);
-
+  background: rgb(4, 52, 40, 0.6);
+  background: linear-gradient(
+    0deg,
+    rgba(4, 52, 40, 1) 0%,
+    rgba(225, 239, 255, 1) 57%,
+    rgba(225, 255, 247, 1) 100%
+  );
 }
 
 h1,
@@ -66,7 +67,7 @@ select {
 
 .box1 {
   max-width: 1280px;
-  background-color:#cededf;
+  background-color: #cededf;
   margin: 0% auto;
   padding: 5%;
   border-radius: 20px;
@@ -83,13 +84,23 @@ select {
 .box3 {
   display: flex;
   flex-direction: column;
-  align-items: center;  background-color: RGB(185, 208, 182);
+  align-items: center;
+  background-color: RGB(185, 208, 182);
   margin: 0% auto;
   padding: 5%;
   border-radius: 20px;
 }
 
-
+.box4 {
+  display: flex;
+  max-width: 1280px;
+  flex-direction: column;
+  align-items: center;
+  background-color: #4E8082;
+  margin: 0% auto;
+  padding: 5%;
+  border-radius: 20px;
+}
 
 .boxInside {
   margin: 2% auto;
