--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ select {
   max-width: 1280px;
   flex-direction: column;
   align-items: center;
-  background-color: #4E8082;
+  background-color: #4e8082;
   margin: 0% auto;
   padding: 5%;
   border-radius: 20px;
